# libplayer

./: .gitignore  README.md  meson.build
android/: build.gradle  gradle.properties  settings.gradle
android/example/: build.gradle
android/example/src/main/: AndroidManifest.xml
android/example/src/main/java/studio/stream/player/: PlayerMainActivity.kt
android/example/src/main/res/layout/: activity_studio_main.xml
android/example/src/main/res/values/: ic_launcher_background.xml  strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/lib/: AndroidManifest.xml  build.gradle
android/lib/java/studio/stream/libplayer/: Player.java  PlayerSurfaceView.java
android/lib/jni/: Android.mk  PlayerAndroid.cpp
example/: main.c  meson.build
src/: libplayer.cpp  libplayer.h  meson.build
